test/valid/58168_minusTwoNumbers/minusTwoNumbers.agu
-- Author: 58168, Henrique Costa Vale

let minus(a,b): (Int,Int) -> Int =
   let c : Int = a - b ;
   c

let main(_) : Unit -> Unit =
  print(minus(5,4))