test/invalid-syntax/58168_undeclaredVar1/58168_missingLetInfo.agu
-- Author: 58168, Henrique Costa Vale

let _ : Unit =
  let x : Int = 2
  let y : Int = 3
  let z : Int = 4
  let a = x + y + z + b
